<resources>
    <string name="app_name">Shindy</string>
    <string name="shindy">Shindy</string>
    <string name="fb_acc_verification_text">For account verification you must sign in with   a Facebook account to use Shindy</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="uniqe_events_for_singles">Unique Events for Singles</string>
    <string name="facebook_app_id">434815240293809</string>
    <string name="fb_login_protocol_scheme">fb434815240293809</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">mUWox3yqTY4g7vu0PzXF0mjxw</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">YrMcoseUFlQUxV7MIgrP1Sx4ksNSbY5jHTEuuRz5ovJvUrbfXM</string>
    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="profile_preferences"><![CDATA[Profile & Prefs]]></string>
    <string name="event_mgmt">Event Mgmt</string>
    <string name="users_mgmt">Users Mgmt</string>
    <string name="my_invites">My Invites</string>
    <string name="my_shindigs">My Shindigs</string>
    <string name="logout">Logout</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="preview"><u>Preview</u></string>
    <string name="prefer_to_be_invited_n_with_others_with_in">Prefer to be invited \nwith others with in</string>
    <string name="distance">Distance</string>
    <string name="religion">Religion (optional)</string>
    <string name="gender_preference">Gender Preference (optional)</string>
    <string name="availability">Availability (optional)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users">Users</string>
    <string name="new_users">New Users</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="invite">Invite</string>
    <string name="message">Message</string>
    <string name="show">Show</string>
    <string name="filters">+Filters</string>
    <string name="filtersApl">FILTER APPLIED</string>
    <string name="preference_file_key">prefe_file_key</string>
    <string name="send_label">Done</string>
    <string name="events_you_re_attending">EVENTS YOU’RE ATTENDING</string>
    <string name="invited">INVITED</string>
    <string name="details">Details</string>
    <string name="who_s_invited">WHO\'s INVITED</string>
    <string name="likedEvent">Liked Events</string>
    <string name="blockedEv">Blocked Events</string>
    <string name="eventRev">Event Review</string>
    <string name="review">Reviews</string>
    <string name="discussion">Discussion</string>
    <string name="block_event">BLOCK EVENT</string>
    <string name="send_invite">SEND INVITE</string>
    <string name="i_m_in">I\'M IN</string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="host_new_event">Host New Event</string>
    <string name="psychologist_susan_david_shares_how_the_way_we_deal_with_our_emotions_shapes_everything_that_matters_our_actions_careers_relationships_health_and_happiness_in_this_deeply_moving_humorous_and_potentially_life_changing_talk_she_challenges_a_culture_that_prizes_positivity_over_emotional_truth_and_discusses_the_powerful_strategies_of_emotional_agility_a_talk_to_share">Psychologist Susan David shares how the way we deal with our emotions shapes everything that matters: our actions, careers, relationships, health and happiness. In this deeply moving, humorous and potentially life-changing talk, she challenges a culture that prizes positivity over emotional truth and discusses the powerful strategies of emotional agility. A talk to share.</string>
    <string name="Vancuver">Vancouver Convention Centre offers both scale and intimacy. At its heart is a soaring space where TED\'s stage designers have created a custom theater.</string>
    <string name="title_activity_maps">Map</string>
    <string name="co_hosts">Co-hosts</string>
    <string name="event_name">Event name</string>
    <string name="my_messages">My Messages</string>
    <string name="messages">Messages</string>
    <string name="active">Active</string>
    <string name="groups">Groups</string>
    <string name="event_feedback">Event Feedback</string>
    <string name="choose_date">Choose date</string>
    <string name="name_n_age">%1$s, %2$s</string>
    <string name="list_empty">List Empty</string>
    <string name="transition_event_image">transition_event_image</string>
    <string name="time_start">Time Start</string>
    <string name="date_start">Date Start</string>
    <string name="date_end">Date End</string>
    <string name="time_end">Time End</string>
    <string name="location">Location</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="website">Website</string>
    <string name="ticket_price">Ticket Price</string>
    <string name="max_male">Max Male</string>
    <string name="max_female">Max Female</string>
    <string name="spots">Spots</string>
    <string name="we_charged__">We charged a 10% service fee for each ticket purchased. It is how we keep food on the table.</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="zipcode">Zipcode</string>
    <string name="created_events">Created Events</string>
    <string name="save">Save</string>
    <string name="event_successfully_created">Event Successfully Created</string>
    <string name="event_successfully_updated">Event Successfully Updated</string>
    <string name="event_details">Event Details</string>
    <string name="please_try_again">Please Try Again</string>
    <string name="save_failed">No changes made</string>
    <string name="reviews"><i>Reviews</i></string>
    <string name="private_host_n">Private Host: %1$s</string>
    <string name="hosted_by_n">Hosted by: %1$s</string>
    <string name="invited_by_n">Invited by: %1$s</string>
    <string name="view_previous_reply">View %1$s previous reply</string>
    <string name="offer_to_pay">Offer to Pay if you accept: $%1$s</string>
    <string name="event_sched_n_n">%1$s | %2$s</string>
    <string name="invite_sent_bam">Invite Sent....BAM !</string>
    <string name="expires_n">Expires: %1$s</string>
    <string name="location_n">Location: %1$s</string>
    <string name="date_n">Date: %1$s</string>
    <string name="prompt_double_back_exit">Press back again to exit</string>
    <string name="long_latin">Lorem ipsum dolor sit amet,Praesent vestibulum non sapien a scelerisque.Lorem ipsum dolor sit amet,Praesent vestibulum non sapien a scelerisque.Lorem ipsum dolor sit amet,Praesent vestibulum non sapien a scelerisque.</string>
    <string name="edit">Edit</string>
    <string name="just_now">just now</string>
    <string name="time_ago">%s ago</string>
    <string name="yesterday">yesterday</string>
    <string name="quick_review">Quick Review</string>
    <string name="rate_the_event">Rate the Event</string>
    <string name="rate_host">Rate your Event host</string>
    <string name="comments_optional">Comments (optional)</string>
    <string name="quick_review_remarks">Thanks. This helps make Shindig awesome</string>
    <string name="submit">Submit</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">Allow app to access location</string>
    <string name="ok">Ok</string>
    <string name="strings_event_review_msg">Help us know which events are awesome. Each review literally takes like 5 seconds. Thanks a heap!</string>
    <string name="miles_away_d">%d miles away</string>
    <string name="guest_can_invite">Guest can invite friends</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="purchase_notice_string">All sales are final and non-refundable. You will receive an email with your ticket and additional information.</string>
    <string name="allow_anonym_invite">Allow anonymous invites</string>
    <string name="join_groups">Join groups with your interests</string>
    <string name="age_preferences">Age Preferences</string>
    <string name="age_pref_to_be_invited">Prefer to be invited with others within</string>
    <string name="prof_pref_show_distance">Show Events Within</string>
    <string name="does_not_apply_extreme_events">Does not apply to extreme events</string>
    <string name="religion_que">Religion?</string>
    <string name="show_my_religion_on_profile">Show My Religion on Profile</string>
    <string name="invite_me_to_events_other_religion">Invite me to events with others from my religion</string>
    <string name="interested_in">Interested in</string>
    <string name="show_my_gender_pref_on_profile">Show my gender preference on my Profile</string>
    <string name="all_rights_reserved">Shindy All Rights Reserved \nFor assistance or feedback please contact us at \nsupport@shindygo.com</string>
    <string name="pay_for_invitee">Pay for Invitee</string>
    <string name="pay_for_invitee_message">By clicking the button below you agree to pay for the invitees ticket if they accept your invitation to attend the event. Your credit card will not be charged unless they agree to attend. You can retract your offer at any time as long as the invitee has not already accepted. All ticket sales are final and non-refundable.</string>
    <string name="i_agree">I agree</string>
    <string name="mark_invite_anonymous">Mark Invite Anonymous</string>
    <string name="mark_anonymous_message">The recipient won\'t know it was you who sent them an invitation to attend your event.</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="blocked_event_fragment_header">These are events that have been thumbed down and blocked. Click the block symbol to remove them from your block list.</string>
    <string name="liked_fragment_message">These are events that have been thumbed up. This helps our super secret sauce to algorithm find related events that you might like. Click the thumb to remove them from your like list.</string>
    <string name="blocked_users_view_message_string">Blocked users are banned from messaging you and will not be invited to your small events. (Note another user attending your event may still invite a user on your blocked list)</string>
    <string name="times_not_available">Times not available to attend events</string>
    <string name="add">add</string>
    <string name="total_reviews">Total Reviews</string>
    <string name="offered_to_pay">Offered to pay</string>
    <string name="invited_anonymously">Invited Anonymously</string>
    <string name="choose_time">Choose Time</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="leave_note_optional">Leave a Note (Optional)</string>
    <string name="enter_email">Enter Email</string>
    <string name="please_select_day">Please select day</string>
    <string name="please_select_time">Please select time</string>
    <string name="separate_each_email">separate each email by a comma</string>
    <string name="enter_your_invite_code">Enter you Event Invite Code</string>
    <string name="invite_me_to_events_with_same_gender">Invite me to events with others that share the same gender preference</string>
    <string name="loading_wait">Loading page please wait</string>
    <string name="title_activity_join_group">Join Group</string>
</resources>