<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay_quick_review"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp5"
        android:layout_marginTop="@dimen/dp5"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dp10"
            android:layout_weight="1"
            android:text="@string/rate_the_event"
            android:textSize="12sp" />

        <RatingBar
            android:id="@+id/rb_event"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/dp10"
            android:numStars="5"
            android:isIndicator="false"
            android:stepSize="0.1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp5"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dp10"
            android:layout_weight="1"
            android:text="@string/rate_host"
            android:textSize="12sp" />

        <android.support.v7.widget.AppCompatRatingBar
            android:id="@+id/rb_host"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/dp10"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:isIndicator="false"

            android:numStars="5"
            android:stepSize="0.1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|bottom|left"
            android:layout_marginRight="@dimen/dp20"
            android:text="@string/comments_optional"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_border_accent"
            android:ems="10"
            android:inputType="textMultiLine"
            android:lines="2"
            android:maxLines="6"
            android:paddingBottom="@dimen/dp10"
            android:paddingLeft="@dimen/dp10"
            android:paddingRight="@dimen/dp10"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quick_review_remarks"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_submit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
