<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp5"
    android:background="@drawable/rouded_corner_box"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp5"
        android:layout_marginTop="@dimen/dp5"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dp20"
            android:layout_height="@dimen/dp20"
            android:src="@drawable/warring" />

        <TextView
            android:id="@+id/list_item_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp5"
            android:textAllCaps="true"
            android:textSize="@dimen/sp12"
            tools:text="@string/profile" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp5"
        android:layout_marginTop="@dimen/dp5"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dp20"
            android:layout_height="@dimen/dp20"
            android:src="@drawable/star" />

        <TextView
            android:id="@+id/list_item_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5"
            android:gravity="center_vertical"
            android:textAllCaps="true"
            android:textSize="@dimen/sp12"
            tools:text="@string/favorite" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp5"
        android:layout_marginTop="@dimen/dp5"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dp20"
            android:layout_height="@dimen/dp20"
            android:src="@drawable/add_person" />

        <TextView
            android:id="@+id/list_item_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5"
            android:gravity="center_vertical"
            android:textAllCaps="true"
            android:textSize="@dimen/sp12"
            tools:text="@string/invite" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp5"
        android:layout_marginTop="@dimen/dp5"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dp20"
            android:layout_height="@dimen/dp20"
            android:src="@drawable/message" />

        <TextView
            android:id="@+id/list_item_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5"
            android:gravity="center_vertical"
            android:textAllCaps="true"
            android:textSize="@dimen/sp12"
            tools:text="@string/message" />
    </LinearLayout>
</LinearLayout>