<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.shindygo.shindy.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_backgroud"
        android:text="Hello World!" />

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dp10">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="1"
            android:text="@string/shindy"
            android:textColor="@android:color/black"
            android:textSize="50dp" />

        <TextView
            android:id="@+id/app_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="1"
            android:text="@string/uniqe_events_for_singles"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/black" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_margin="4dp"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingTop="12dp" />


        <Button
            android:id="@+id/fb_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp30"
            android:layout_marginRight="@dimen/dp30"
            android:layout_marginTop="@dimen/dp16"
            android:background="@drawable/rounded_blue_button"
            android:gravity="center"
            android:onClick="OnClickFaceBookLogin"
            android:text="@string/login_with_facebook"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/fb_verfication_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/dp16"
            android:gravity="center"
            android:text="@string/fb_acc_verification_text"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>
